final changes to code base

--- a/configs/wanda_config.yaml
+++ b/configs/wanda_config.yaml
@@ -5,9 +5,10 @@ keep_nsfw: false
 skill_ratio: 0.01
 res_path: 'results/stable-diffusion'
 model_id: 'runwayml/stable-diffusion-v1-5'
+# model_id: 'CompVis/stable-diffusion-v1-4'
 n_layers: 16
 fine_tuned_unet: null
-gpu: 5
+gpu: 3
 seed: 0
 timesteps: 51
 dbg: false
